--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,9 +12,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+      classpath "com.android.tools.build:gradle:8.2.1"
+        classpath "com.facebook.react:react-native-gradle-plugin:+"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
