--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@sanity/client": "^6.18.0",
+    "@shopify/flash-list": "^1.6.4",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.3.1",
