--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.2.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0",
-    "react-tinder-card": "^1.6.4"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
