--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.74.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "^6.3.1",
