--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,23 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.google.gms:google-services:4.4.2'
     }
+    allprojects {
+    repositories {
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = project.properties['sk.eyJ1IjoiaW5hYW1mbHV0dGVyZGV2IiwiYSI6ImNsbzRzdWp3ZTA1eDgyamxhajJoeDFjejkifQ.gGwdybRtCvYnmblALLiD9Q'] ?: "sk.eyJ1IjoiaW5hYW1mbHV0dGVyZGV2IiwiYSI6ImNsbzRzdWp3ZTA1eDgyamxhajJoeDFjejkifQ.gGwdybRtCvYnmblALLiD9Q"
+                }
+            }
+        }
+    }
 }
 
 apply plugin: "com.facebook.react.rootproject"
