--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@react-spring/native": "^9.5.5",
+    "@rnmapbox/maps": "^10.1.27",
     "@sanity/client": "^6.18.0",
     "@shopify/flash-list": "^1.6.4",
+    "expo": "^51.0.14",
+    "expo-dev-client": "^4.0.18",
     "firebase": "^10.12.2",
-    "firebase-tools-extra": "^1.0.0",
+    "firebase-tools-extra": "^0.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-fast-image": "^8.6.3",
@@ -44,7 +47,7 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2"
